# QtWorkspace

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.txt  vcpkg.json
Apps/: CMakeLists.txt
Apps/Navigator/: CMakeLists.txt  configure.h.in  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Apps/PlugTalk/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Apps/Plugs/: CMakeLists.txt
Apps/Plugs/OtsuThreshold/: CMakeLists.txt  OtsuThresholdConfig.h.in  OtsuThresholdExport.h  main.cpp  otsuthreshold.cpp  otsuthreshold.h  otsuthreshold.ui
Apps/VulkanCubes/: CMakeLists.txt  vcMain.cpp  vcMainWindow.cpp  vcMainWindow.h
CMake/: QtUtility.cmake  SetupLibraries.cmake
CMake/vcpkg-custom-triplets/: x64-windows-custom.cmake
Modules/: CMakeLists.txt
Modules/Logging/: CMakeLists.txt
Modules/Logging/include/: Logger.h
Modules/Logging/src/: Logger.cpp
Modules/Rendering/: .gitignore  CMakeLists.tomigrate.txt  CMakeLists.txt  README.txt
Modules/Rendering/include/ogl/: AirwayRenderWidget.h  AirwayTreeEngine.h  AxialSlabWidget.h  AxialSlicerWidget.h  AxialSlicerWidget_Backup.h  CTVolume.h  Camera6DoF.h  CoronalSlicerWidget.h  Crosshair.h  MainWindow.h  ObliqueSlicer.h  ObliqueSlicerBase.h  ObliqueSlicerWidget.h  SagittalSlicerWidget.h  SlabBase.h  SlicerBase.h  SlicerCamera.h  SlicerDisplay.h  mmOpenGLErrorCheck.h  mmUtilityTools.h
Modules/Rendering/include/vk/: VulkanWidget.h
Modules/Rendering/resources/ogl/: AirwayFragmentShader.glsl  AirwayShaders.qrc  AirwayVertexShader.glsl  AxialSlabCompute.glsl  AxialSliceCompute.glsl  ComputeShaders.qrc  CoronalSliceCompute.glsl  CrosshairFragment.glsl  CrosshairShaders.qrc  CrosshairVertex.glsl  ObliqueSliceCompute.glsl  SagittalSliceCompute.glsl  SlicerFragment.glsl  SlicerShaders.qrc  SlicerVertex.glsl
Modules/Rendering/src/config/: rendering.configure.h.in
Modules/Rendering/src/ogl/: AirwayRenderWidget.cpp  AirwayTreeEngine.cpp  AxialSlabWidget.cpp  AxialSlicerWidget.cpp  AxialSlicerWidget_Backup.cpp  CTVolume.cpp  Camera6DoF.cpp  CoronalSlicerWidget.cpp  Crosshair.cpp  MainWindow.cpp  ObliqueSlicer.cpp  ObliqueSlicerBase.cpp  ObliqueSlicerWidget.cpp  SagittalSlicerWidget.cpp  SlabBase.cpp  SlicerBase.cpp  SlicerCamera.cpp  SlicerDisplay.cpp  main.cpp  mmUtilityTools.cpp
Modules/Rendering/src/vk/: VulkanWidget.cpp
Modules/TestDevice/: CMakeLists.txt
Modules/TestDevice/include/: TestDeviceAPI.h
Modules/TestDevice/src/: TestDeviceAPI.cpp
Modules/TestDeviceApp/: CMakeLists.txt  main.cpp
